pkg/program/shell: Increment $E:SHLVL.
This fixes #834.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -48,6 +48,8 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 -   Elvish now uses `$XDG_RUNTIME_DIR` to keep runtime files if possible.
 
+-   Elvish now increments the `$SHLVL` environment variable.
+
 # Notable bugfixes
 
 -   Elvish no longer crashes when redirecting to a high FD
