website/blog: Document the breaking change of the src command.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -3,6 +3,10 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 # Breaking changes
 
+-   The `type` and `path` fields of the value returned by `src` have been
+    removed. Instead, its `name` field now contains the full path of the file,
+    when the source originates from a file.
+
 # Deprecated features
 
 **TODO**: Show warnings when these feature are used (#898).
