Reintroduce the path field of Source as a deprecated feature.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -3,9 +3,7 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 # Breaking changes
 
--   The `type` and `path` fields of the value returned by `src` have been
-    removed. Instead, its `name` field now contains the full path of the file,
-    when the source originates from a file.
+-   The `type` field of the value returned by `src` have been removed.
 
 # Deprecated features
 
@@ -15,6 +13,9 @@ Version 0.14 has not been released yet. It is planned to be released on
     deprecated. Use the `&display` option instead.
 
 -   The `explode` command is now deprecated. Use `all` instead.
+
+-   The `path` field of the value returned by `src` is now deprecated. Use the
+    `name` field instead.
 
 # Notable new features
 
