pkg/eval: Support eval-time deprecation warning.
This addresses #898.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -7,15 +7,17 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 # Deprecated features
 
-**TODO**: Show warnings when these feature are used (#898).
-
 -   The `&display-suffix` option of the `edit:complex-candidate` is now
     deprecated. Use the `&display` option instead.
+
+    Note: Code using this option triggers a deprecation warning when evaluated.
 
 -   The `explode` command is now deprecated. Use `all` instead.
 
 -   The `path` field of the value returned by `src` is now deprecated. Use the
     `name` field instead.
+
+    Note: **No** warning is shown for this deprecation.
 
 # Notable new features
 
