Support compile-time deprecation.
This fixes #898.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -7,17 +7,23 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 # Deprecated features
 
--   The `&display-suffix` option of the `edit:complex-candidate` is now
-    deprecated. Use the `&display` option instead.
+Elvish now has a deprecation mechanism to give advance notice for breaking
+changes. Deprecated features trigger warnings, and will be removed in the next
+release.
 
-    Note: Code using this option triggers a deprecation warning when evaluated.
+The following deprecated features trigger a warning at compilation time:
 
 -   The `explode` command is now deprecated. Use `all` instead.
 
+The following deprecated features trigger a warning at evaluation time:
+
+-   The `&display-suffix` option of the `edit:complex-candidate` is now
+    deprecated. Use the `&display` option instead.
+
+The following deprecated features, unfortunately, do not trigger any warnings:
+
 -   The `path` field of the value returned by `src` is now deprecated. Use the
     `name` field instead.
-
-    Note: **No** warning is shown for this deprecation.
 
 # Notable new features
 
