pkg/eval/str: Add join, replace and split.
The implementations are mostly copied from the builtin joins, replaces and
splits, with small changes to the error behavior in the join function.

The versions in the builtin module are now deprecated.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -15,6 +15,9 @@ The following deprecated features trigger a warning at compilation time:
 
 -   The `explode` command is now deprecated. Use `all` instead.
 
+-   The `joins`, `replaces` and `splits` commands are now deprecated. Use
+    `str:join`, `str:replace` and `str:split` instead.
+
 The following deprecated features trigger a warning at evaluation time:
 
 -   The `&display-suffix` option of the `edit:complex-candidate` is now
