pkg/eval: Support specifying a callback for the "time" builtin.
This fixes #295.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -5,6 +5,10 @@ Version 0.14 has not been released yet. It is planned to be released on
 
 -   The `type` field of the value returned by `src` have been removed.
 
+-   The `all` command no longer preserves byte inputs as is; instead it turns
+    them into values, one each line. It also accepts an optional list argument,
+    consistent with other value-taking commands.
+
 # Deprecated features
 
 Elvish now has a deprecation mechanism to give advance notice for breaking
@@ -17,6 +21,9 @@ The following deprecated features trigger a warning at compilation time:
 
 -   The `joins`, `replaces` and `splits` commands are now deprecated. Use
     `str:join`, `str:replace` and `str:split` instead.
+
+-   The `-time` command has been promoted to `time`. The `-time` command is now
+    a deprecated alias for `time`.
 
 The following deprecated features trigger a warning at evaluation time:
 
@@ -41,9 +48,8 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   Dynamic strings may now be used as command as long as they contain slashes
     ([#764](https://b.elv.sh/764)).
 
--   The `all` command no longer preserves byte inputs as is; instead it turns
-    them into values, one each line. It also accepts an optional list argument,
-    consistent with other value-taking commands.
+-   The `-time` command has been promoted to `time`, and it now accepts an
+    `&on-end` callback to specify how to save the duration of the execution.
 
 -   A new `one` command has been added.
 
