Document the new exc: module and $edit:exceptions.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -43,6 +43,11 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   A new `math:` module has been introduced.
 
+-   A new `exc:` module has been introduced.
+
+-   When a callback of the interactive editor throws an exception, the exception
+    is now saved in a `$edit:exceptions` variable for closer examination.
+
 -   Scripts may now use relative `use` to import files outside `~/.elvish/lib`.
 
 -   Dynamic strings may now be used as command as long as they contain slashes
