Support \r\n everywhere output is processed as individual lines.
This fixes #970.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -9,6 +9,9 @@ Version 0.14 has not been released yet. It is planned to be released on
     them into values, one each line. It also accepts an optional list argument,
     consistent with other value-taking commands.
 
+-   Output captures now split trailing carriage returns from each line,
+    effectively making `\r\n` also valid line separators.
+
 # Deprecated features
 
 Elvish now has a deprecation mechanism to give advance notice for breaking
@@ -76,6 +79,8 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   Elvish now uses `$XDG_RUNTIME_DIR` to keep runtime files if possible.
 
 -   Elvish now increments the `$SHLVL` environment variable.
+
+-   Elvish now supports CRLF line endings in source files.
 
 # Notable bugfixes
 
