pkg/eval/go_fn.go: Surface errors in option parsing.
This fixes #958.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -82,6 +82,9 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   Elvish now supports CRLF line endings in source files.
 
+-   Invalid option names or values passed to builtin functions now correctly
+    trigger an exception, instead of being silently ignored.
+
 # Notable bugfixes
 
 -   Elvish no longer crashes when redirecting to a high FD
