website: Document changes in comments.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -85,6 +85,9 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   Invalid option names or values passed to builtin functions now correctly
     trigger an exception, instead of being silently ignored.
 
+-   Comments are now allowed in list and map literals, and other places where
+    newlines serve as separators.
+
 # Notable bugfixes
 
 -   Elvish no longer crashes when redirecting to a high FD
