Support rethrowing an exception with "fail".
This fixes #941.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -48,6 +48,8 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   A new `exc:` module has been introduced.
 
+-   The `fail` command can now take an exception as the argument and rethrow it.
+
 -   When a callback of the interactive editor throws an exception, the exception
     is now saved in a `$edit:exceptions` variable for closer examination.
 
