Add make-map command.
This fixes #943.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -50,6 +50,8 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   The `fail` command can now take an exception as the argument and rethrow it.
 
+-   A new `make-map` command creates a map from a sequence of pairs.
+
 -   When a callback of the interactive editor throws an exception, the exception
     is now saved in a `$edit:exceptions` variable for closer examination.
 
