website: Document read-line in 0.14.0 release notes.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -52,6 +52,9 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   A new `make-map` command creates a map from a sequence of pairs.
 
+-   A new `read-line` command can be used to read a single line from the byte
+    input.
+
 -   When a callback of the interactive editor throws an exception, the exception
     is now saved in a `$edit:exceptions` variable for closer examination.
 
