website/blog: Add $edit:add-cmd-filters to 0.14.0 release notes.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -95,6 +95,9 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   Comments are now allowed in list and map literals, and other places where
     newlines serve as separators.
 
+-   A new `$edit:add-cmd-filters` variable is now available for controlling
+    whether a command is added to the history.
+
 # Notable bugfixes
 
 -   Elvish no longer crashes when redirecting to a high FD
