pkg/eval/exc: Introduce is-{external-cmd-error nonzero-exit killed}.
This addresses #208.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -46,7 +46,8 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 -   A new `math:` module has been introduced.
 
--   A new `exc:` module has been introduced.
+-   A new `exc:` module has been introduced, including support for printing
+    exception stacktraces and determining the cause of the exception.
 
 -   The `fail` command can now take an exception as the argument and rethrow it.
 
