NEXT-RELEASE: Rearrange the new features section into categories.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -40,6 +40,23 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 
 # Notable new features
 
+New features in the language:
+
+-   The printing of floating-point numbers has been tweaked to feel much more
+    natural ([#811](https://b.elv.sh/811)).
+
+-   Scripts may now use relative `use` to import files outside `~/.elvish/lib`.
+
+-   Dynamic strings may now be used as command as long as they contain slashes
+    ([#764](https://b.elv.sh/764)).
+
+-   Elvish now supports CRLF line endings in source files.
+
+-   Comments are now allowed in list and map literals, and other places where
+    newlines serve as separators.
+
+New features in the standard library:
+
 -   A new `platform:` module has been introduced.
 
 -   A new `unix:` module has been introduced.
@@ -56,14 +73,6 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   A new `read-line` command can be used to read a single line from the byte
     input.
 
--   When a callback of the interactive editor throws an exception, the exception
-    is now saved in a `$edit:exceptions` variable for closer examination.
-
--   Scripts may now use relative `use` to import files outside `~/.elvish/lib`.
-
--   Dynamic strings may now be used as command as long as they contain slashes
-    ([#764](https://b.elv.sh/764)).
-
 -   The `-time` command has been promoted to `time`, and it now accepts an
     `&on-end` callback to specify how to save the duration of the execution.
 
@@ -72,34 +81,33 @@ The following deprecated features, unfortunately, do not trigger any warnings:
 -   A new `read-upto` command can now be added to read byte inputs up to a
     delimiter ([#831](https://b.elv.sh/831)).
 
+New features in the interactive editor:
+
+-   When a callback of the interactive editor throws an exception, the exception
+    is now saved in a `$edit:exceptions` variable for closer examination.
+
 -   The ratios of the column widths in navigation mode can now be configured
     with `$edit:navigation:width-ratio` ([#464](https://b.elv.sh/464))
 
--   In the interactive REPL, the user can now prefix the command with a space to
-    prevent it from being saved in the command history.
+-   A new `$edit:add-cmd-filters` variable is now available for controlling
+    whether a command is added to the history.
 
--   The printing of floating-point numbers has been tweaked to feel much more
-    natural ([#811](https://b.elv.sh/811)).
+    The default value of this variable filters out commands that start with a
+    space.
 
 -   The `edit:complex-candidate` now supports a `&display` option to specify the
     full display text.
+
+Other improvements:
 
 -   Elvish now uses `$XDG_RUNTIME_DIR` to keep runtime files if possible.
 
 -   Elvish now increments the `$SHLVL` environment variable.
 
--   Elvish now supports CRLF line endings in source files.
+# Notable bugfixes
 
 -   Invalid option names or values passed to builtin functions now correctly
     trigger an exception, instead of being silently ignored.
-
--   Comments are now allowed in list and map literals, and other places where
-    newlines serve as separators.
-
--   A new `$edit:add-cmd-filters` variable is now available for controlling
-    whether a command is added to the history.
-
-# Notable bugfixes
 
 -   Elvish no longer crashes when redirecting to a high FD
     ([#788](https://b.elv.sh/788)).
