--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -57,6 +57,8 @@ New features in the language:
 
 New features in the standard library:
 
+-   A new `order` command for sorting values has been introduced.
+
 -   A new `platform:` module has been introduced.
 
 -   A new `unix:` module has been introduced.
