pkg/eval: Support passing any value to "fail".

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -68,7 +68,8 @@ New features in the standard library:
 -   A new `exc:` module has been introduced, including support for printing
     exception stacktraces and determining the cause of the exception.
 
--   The `fail` command can now take an exception as the argument and rethrow it.
+-   The `fail` command now takes an argument of any type. In particular, if the
+    argument is an exception, it rethrows the exception.
 
 -   A new `make-map` command creates a map from a sequence of pairs.
 
