NEXT-RELEASE: Document $edit:small-word-abbr in release note.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -89,6 +89,9 @@ New features in the interactive editor:
 -   When a callback of the interactive editor throws an exception, the exception
     is now saved in a `$edit:exceptions` variable for closer examination.
 
+-   A new alternative abbreviation mechanism, "small word abbreviation", is now
+    available and configurable via `$edit:small-word-abbr`.
+
 -   The ratios of the column widths in navigation mode can now be configured
     with `$edit:navigation:width-ratio` ([#464](https://b.elv.sh/464))
 
