Publish release notes of 0.14.0.

--- a/website/blog/0.14.0-release-notes.md
+++ b/website/blog/0.14.0-release-notes.md
@@ -1,5 +1,8 @@
-This is the draft release notes for the next release, 0.14.0. It is planned to
-be released on 2020-07-01, 6 months after 0.13.0.
+Version 0.14.0 has been released on 2020-07-05, 6 months after 0.13, bringing
+many new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
 
 # Breaking changes
 
