Fix typos found by codespell

--- a/website/blog/0.10-release-notes.md
+++ b/website/blog/0.10-release-notes.md
@@ -121,7 +121,7 @@ Elvish Newsletter accompanies this release.
     it is now to implement listing modes entirely in Elvish script.
 
     Experimental re-implementations of the several standard listing modes
-    (location mode, history lising mode and lastcmd mode) are provided as the
+    (location mode, history listing mode and lastcmd mode) are provided as the
     bundled `narrow` module. Read
     [its source in eval/narrow.elv](https://github.com/elves/elvish/blob/e7a8b96d7d4fccb7bafe01f27db9c0fe06c568b4/eval/narrow.elv)
     for more details.
