--- a/website/blog/0.12-release-notes.md
+++ b/website/blog/0.12-release-notes.md
@@ -87,7 +87,7 @@ As usual, prebuilt binaries can be found in [get](../get).
 -   Location mode now supports the notion of workspaces
     ([#643](https://github.com/elves/elvish/issues/643)).
 
--   The output of `elvish -buildinfo -json` is now actually vaid JSON
+-   The output of `elvish -buildinfo -json` is now actually valid JSON
     ([#682](https://github.com/elves/elvish/issues/682)).
 
 -   New [`styled`](../ref/builtin.html#styled) and
