Prepare for 0.15.0 release.
* Rebrand NEXT-RELEASE.md to the release notes for 0.15.0, and publish it.

* Bump default deprecation level to 15.

--- a/website/blog/0.15.0-release-notes.md
+++ b/website/blog/0.15.0-release-notes.md
@@ -1,5 +1,8 @@
-This is the draft release notes for 0.15.0, scheduled to be released on
-2021-01-01.
+Version 0.15.0 has been released on 2021-01-24, 6 months after 0.14.0, bringing
+many new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
 
 # Breaking changes
 
@@ -21,6 +24,8 @@ This is the draft release notes for 0.15.0, scheduled to be released on
     key names. See [#1163](https://b.elv.sh/1163).
 
 # Deprecated features
+
+Deprecated features will be removed in 0.16.0.
 
 The following deprecated features trigger a warning whenever the code is parsed
 or compiled, even if it is not executed:
