Add a new "deprecate" command.

--- a/website/blog/0.15.0-release-notes.md
+++ b/website/blog/0.15.0-release-notes.md
@@ -98,6 +98,8 @@ New features in the standard library:
 -   A new `path:` module has been introduced for manipulating and testing
     filesystem paths.
 
+-   A new `deprecate` command.
+
 New features in the interactive editor:
 
 -   The new commands `edit:add-var` and `edit:add-vars` provide an API for
