Fix implementation of path:is-{dir regular} to use Lstat.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -1,2 +1,7 @@
 This is the draft release notes for 0.16.0. It is scheduled to be released on
 2020-07-01.
+
+# Notable bugfixes
+
+-   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
+    as advertised in the documentation.
