--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -1,7 +1,20 @@
 This is the draft release notes for 0.16.0. It is scheduled to be released on
 2020-07-01.
 
+# Breaking changes
+
+-   The following commands are now replaced by `edit:close-mode`:
+    `edit:close-listing`, `edit:completion:close`, `edit:history:close`,
+    `edit:listing:close`.
+
 # Notable bugfixes
 
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
     as advertised in the documentation.
+
+# Notable new features
+
+New features in the interactive editor:
+
+-   The editor now supports setting global bindings via `$edit:global-binding`.
+    Global bindings are consulted for keys not present in mode-specific bindings.
