Handling symlinks with an unresolvable target
Symlinks in a pathname that cannot be resolved because the target is
not valid represent a special case. Specifically, if resolving a symlink
results in a syscall.ENOENT error it is friendlier, and generally more
useful, to treat it as a non-error that simply outputs the original path.
This makes the command consistent with the behavior of the external
`realpath` it mimics.

Fixes #1236

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -11,6 +11,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     Instead, the history listing mode now applies smart-case matching by
     default.
 
+-   The `path:eval-symlinks` command no longer returns an error when the
+    argument is an invalid path; instead it now returns the original path.
+    ([#1236](https://b.elv.sh/1236)).
+
 # Notable bugfixes
 
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
