--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -7,6 +7,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     `edit:close-listing`, `edit:completion:close`, `edit:history:close`,
     `edit:listing:close`.
 
+-   The `edit:histlist:toggle-case-sensitivity` command has been removed.
+    Instead, the history listing mode now applies smart-case matching by
+    default.
+
 # Notable bugfixes
 
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
@@ -17,4 +21,5 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
 New features in the interactive editor:
 
 -   The editor now supports setting global bindings via `$edit:global-binding`.
-    Global bindings are consulted for keys not present in mode-specific bindings.
+    Global bindings are consulted for keys not present in mode-specific
+    bindings.
