--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -16,6 +16,9 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
     as advertised in the documentation.
 
+-   Evaluating `~username` no longer appends a slash
+    ([#1246](https://b.elv.sh/1246)).
+
 # Notable new features
 
 New features in the interactive editor:
