Add new edit:clear command.
This fixes #1238.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -26,3 +26,5 @@ New features in the interactive editor:
 -   The editor now supports setting global bindings via `$edit:global-binding`.
     Global bindings are consulted for keys not present in mode-specific
     bindings.
+
+-   A new `edit:clear` builtin to clear the screen has been added.
