--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -49,6 +49,10 @@ New features in the standard library:
 
 -   A new `file:` module contains utilities for manipulating files.
 
+-   Commands for creating, what are usually meant to be temporary, unique
+    directories, path:temp-dir, and regular files, path:temp-file
+    ([#1255](https://b.elv.sh/1255)).
+
 New features in the interactive editor:
 
 -   The editor now supports setting global bindings via `$edit:global-binding`.
