Add $edit:after-command and $edit:command-duration
The `edit:after-command` hooks are called with a single argument:
a pseudo-map with these keys:

    "command": the command line that was run
    "duration": the execution duration in seconds
    "error": any error that occurred ($nil if no error occurred)

The `edit:command-duration` variable is the elapsed seconds (as a
float64) of the most recently run interactive command.

Resolves #1029

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -69,3 +69,9 @@ New features in the interactive editor:
 
 -   The editor now uses a DSL for filtering items in completion, history
     listing, location and navigation modes.
+
+-   A new `edit:after-command` hook that is invoked after each interactive
+    command line is run.
+
+-   A new `edit:command-duration` variable that is the number of seconds to
+    execute the most recent interactive command line.
