--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -11,6 +11,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     Instead, the history listing mode now applies smart-case matching by
     default.
 
+-   Declaring a variable with a `~` suffix, without an explicit initial value,
+    now defaults to $builtin:nop rather than $builtin:nil
+    ([#1248](https://b.elv.sh/1248)).
+
 # Notable bugfixes
 
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
