Document the new filter DSL.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -28,3 +28,6 @@ New features in the interactive editor:
     bindings.
 
 -   A new `edit:clear` builtin to clear the screen has been added.
+
+-   The editor now uses a DSL for filtering items in completion, history
+    listing, location and navigation modes.
