--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -31,3 +31,7 @@ New features in the interactive editor:
 
 -   The editor now uses a DSL for filtering items in completion, history
     listing, location and navigation modes.
+   
+-   A new `file:` builtin module to work with files. Comes with functions such
+    as file:fopen, file:close and more
+
