This is a squash push, Deprecated fns added to compiler.go, more tests added to file_test.go.
file:open & file:close, all tests passed in make test. added more tests to file_test.go, Deprecated features were added to the new_release file. Correction done in new_release file.

file:open & file:close, all tests passed in make test. added more tests to file_test.go, Deprecated features were added to the new_release file. Correction done in new_release file.

Formatting changes, addition of fopen and fclose in compiler.go checkDeprecationfn, addition of new tests in file_test.go

file:open & file:close, all tests passed in make test. added more tests to file_test.go, Deprecated features were added to the new_release file. Correction done in new_release file.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -32,6 +32,9 @@ New features in the interactive editor:
 -   The editor now uses a DSL for filtering items in completion, history
     listing, location and navigation modes.
    
--   A new `file:` builtin module to work with files. Comes with functions such
-    as file:fopen, file:close and more
+-   A new `file:` module to work with files.
 
+# Deprecated features
+
+-   The `builtin:fopen` and `builtin:fclose` commands are deprecated. Use 
+    the equivalent commands in the new `file:` module.  
