--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -3,6 +3,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
 
 # Breaking changes
 
+-   The `builtin:` namespace, useful for referring to builtin variables and
+    commmands explicitly, now requires `use builtin` before use, consistent with
+    other standard library modules.
+
 -   The following commands are now replaced by `edit:close-mode`:
     `edit:close-listing`, `edit:completion:close`, `edit:history:close`,
     `edit:listing:close`.
