Document the new number system in the release notes.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -7,6 +7,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     commmands explicitly, now requires `use builtin` before use, consistent with
     other standard library modules.
 
+-   As a side effect of support for a integer numbers, contexts that require
+    integers no longer accept floating point numbers with a zero fraction part
+    (e.g. `$li[1.0]` is now illegal; `$li[1]` is required).
+
 -   The following commands are now replaced by `edit:close-mode`:
     `edit:close-listing`, `edit:completion:close`, `edit:history:close`,
     `edit:listing:close`.
@@ -24,6 +28,12 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     ([#1246](https://b.elv.sh/1246)).
 
 # Notable new features
+
+New features in the language:
+
+-   Elvish's number type has been extended with support for arbitrary-precision
+    integers and rationals. Many numerical commands in the builtin module and
+    the `math:` module have been extended with support for them.
 
 New features in the interactive editor:
 
