Minor fixes for the file module:
* Add to release notes.

* Fix the deprecation level of fopen and fclose.

* Fix format of elvdoc and add ref doc.

* Minor style adjustments.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -19,6 +19,16 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     Instead, the history listing mode now applies smart-case matching by
     default.
 
+# Deprecated features
+
+Deprecated features will be removed in 0.17.0.
+
+The following deprecated features trigger a warning whenever the code is parsed
+or compiled, even if it is not executed:
+
+-   The `fopen` and `fclose` commands are deprecated. Use `file:open` and
+    `file:close` instead.
+
 # Notable bugfixes
 
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
@@ -34,6 +44,10 @@ New features in the language:
 -   Elvish's number type has been extended with support for arbitrary-precision
     integers and rationals. Many numerical commands in the builtin module and
     the `math:` module have been extended with support for them.
+
+New features in the standard library:
+
+-   A new `file:` module contains utilities for manipulating files.
 
 New features in the interactive editor:
 
