Minor fixup for path:temp-{dir file}.
* Remove `MatchesRegexp` from eval/vals since it is not part of the
  Elvish value protocol.

* Simplify implementation of value matching in `eval/evaltest`.

* Documentation wording tweaks.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -49,8 +49,8 @@ New features in the standard library:
 
 -   A new `file:` module contains utilities for manipulating files.
 
--   Commands for creating, what are usually meant to be temporary, unique
-    directories, path:temp-dir, and regular files, path:temp-file
+-   Commands for creating temporary files and directories, `path:temp-file`
+    and `path:temp-dir`
     ([#1255](https://b.elv.sh/1255)).
 
 New features in the interactive editor:
