--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -49,9 +49,8 @@ New features in the standard library:
 
 -   A new `file:` module contains utilities for manipulating files.
 
--   Commands for creating temporary files and directories, `path:temp-file`
-    and `path:temp-dir`
-    ([#1255](https://b.elv.sh/1255)).
+-   Commands for creating temporary files and directories, `path:temp-file` and
+    `path:temp-dir` ([#1255](https://b.elv.sh/1255)).
 
 New features in the interactive editor:
 
