Minor fixup for #1274.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -20,7 +20,7 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
     default.
 
 -   Declaring a variable with a `~` suffix, without an explicit initial value,
-    now defaults to $builtin:nop rather than $builtin:nil
+    now initializes its value to the builtin `nop` function rather than `$nil`
     ([#1248](https://b.elv.sh/1248)).
 
 # Deprecated features
