Document fix of #1287 in next release note.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -35,6 +35,9 @@ or compiled, even if it is not executed:
 
 # Notable bugfixes
 
+-   Iterating over certain list slices no longer crash Elvish
+    ([#1287](https://b.elv.sh/1287)).
+
 -   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
     as advertised in the documentation.
 
