Remove the NEXT-RELEASE.md symlink.
GitHub displays symlinks simply as the path of the destination, meaning
that we can't just link to it for the notes of the next release.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -38,10 +38,13 @@ or compiled, even if it is not executed:
 -   Iterating over certain list slices no longer crash Elvish
     ([#1287](https://b.elv.sh/1287)).
 
--   The `path:is-dir` and `path:is-regular` commands no longer follow symlinks,
-    as advertised in the documentation.
+-   The `path:is-dir` and `path:is-regular` commands default behavior no longer
+    follows a final symlink as advertised in the original documentation. A
+    `&follow-symlink` option has been added to get the old, undocumented,
+    behavior since it can be useful and avoids the need to use
+    `path:eval-symlinks` to transform the path in common use cases.
 
--   Evaluating `~username` no longer appends a slash
+*   Evaluating `~username` no longer appends a slash
     ([#1246](https://b.elv.sh/1246)).
 
 # Notable new features
