Add a `&cmd-only` option to `edit:command-history`
This is useful when piping the output into a program like `fzf` and more
efficient than dealing with the map. This takes 180.32 ms on my system
(best of five runs):

```
time { edit:command-history &dedup &newest-first | each [hist-entry]{ print $hist-entry[cmd]"\000" } >/dev/null }
```

This option reduces the time to 156.12 ms:

```
time { edit:command-history &dedup &newest-first &cmd-only | each [cmd]{ print $cmd"\000" } >/dev/null }
```

It's not a huge difference but is 13% faster, and should be considerably
faster when combined with a hypothetical `to-lines &null` option I intend
to implement.

Related #1053

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -62,6 +62,9 @@ New features in the standard library:
 -   Commands for creating temporary files and directories, `path:temp-file` and
     `path:temp-dir` ([#1255](https://b.elv.sh/1255)).
 
+-   New options to the `edit:command-history` command: `&dedup`,
+    `&newest-first`, and `&cmd-only` ([#1053](https://b.elv.sh/1053)).
+
 New features in the interactive editor:
 
 -   The editor now supports setting global bindings via `$edit:global-binding`.
