Add `from-terminated` and `to-terminated` commands
This change makes feeding output to commands which handle NUL terminated
"lines" (e.g., `fzf -read0` or `xargs -0`) extremely fast compared to
using an explicit Elvish loop that does `print $val"\x00"`. Similarly for
handling input from commands that produce NUL terminated "lines" (e.g.,
`find . -print0`) compared to an Elvish loop using `read-upto "\x00"`.

Resolves #1070
Related #1053

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -73,6 +73,10 @@ New features in the standard library:
 -   New options to the `edit:command-history` command: `&dedup`,
     `&newest-first`, and `&cmd-only` ([#1053](https://b.elv.sh/1053)).
 
+-   New `from-terminated` and `to-terminated` commands to allow efficient
+    streaming of lines terminated by ASCII NUL or other line terminators
+    ([#1070](https://b.elv.sh/1070)).
+
 New features in the interactive editor:
 
 -   The editor now supports setting global bindings via `$edit:global-binding`.
