--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -33,6 +33,9 @@ or compiled, even if it is not executed:
 -   The `fopen` and `fclose` commands are deprecated. Use `file:open` and
     `file:close` instead.
 
+-   The `prclose` and `pwclose` commands are deprecated. Use `file:close`
+    instead.
+
 # Notable bugfixes
 
 -   Iterating over certain list slices no longer crash Elvish
