Document that #1220 is fixed in release notes for 0.16.0.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -41,6 +41,9 @@ or compiled, even if it is not executed:
 -   Iterating over certain list slices no longer crash Elvish
     ([#1287](https://b.elv.sh/1287)).
 
+-   Globbing no longer crashes when there are files whose names contain invalid
+    UTF-8 sequences ([#1220](https://b.elv.sh/1220)).
+
 -   The `path:is-dir` and `path:is-regular` commands default behavior no longer
     follows a final symlink as advertised in the original documentation. A
     `&follow-symlink` option has been added to get the old, undocumented,
