Change math:pow to produce exact results in certain cases; deprecate math:pow10.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -36,6 +36,8 @@ or compiled, even if it is not executed:
 -   The `prclose` and `pwclose` commands are deprecated. Use `file:close`
     instead.
 
+-   The `math:pow10` command is deprecated. Use `math:pow 10 $exponent` instead.
+
 # Notable bugfixes
 
 -   Iterating over certain list slices no longer crash Elvish
