--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -74,7 +74,7 @@ New features in the standard library:
     `&newest-first`, and `&cmd-only` ([#1053](https://b.elv.sh/1053)).
 
 -   New `from-terminated` and `to-terminated` commands to allow efficient
-    streaming of lines terminated by ASCII NUL or other line terminators
+    streaming of byte sequences terminated by ASCII NUL or any other terminator
     ([#1070](https://b.elv.sh/1070)).
 
 New features in the interactive editor:
