Add plugin support

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -93,3 +93,5 @@ New features in the interactive editor:
 
 -   A new `edit:command-duration` variable that is the number of seconds to
     execute the most recent interactive command line.
+
+-   Support for loading go plugins with `use`.
