--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -63,6 +63,8 @@ New features in the language:
     integers and rationals. Many numerical commands in the builtin module and
     the `math:` module have been extended with support for them.
 
+-   Experimental support for importing modules written in Go with `use`.
+
 New features in the standard library:
 
 -   A new `file:` module contains utilities for manipulating files.
@@ -93,5 +95,3 @@ New features in the interactive editor:
 
 -   A new `edit:command-duration` variable that is the number of seconds to
     execute the most recent interactive command line.
-
--   Support for loading go plugins with `use`.
