Document the reader-gone mechanism in language ref and release notes.
This fixes #952.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -3,6 +3,10 @@ This is the draft release notes for 0.16.0. It is scheduled to be released on
 
 # Breaking changes
 
+-   Exceptions caused by a command trying to write to a closed pipe are now
+    suppressed if the command is part of a pipeline and not the last command of
+    the pipeline.
+
 -   The `builtin:` namespace, useful for referring to builtin variables and
     commmands explicitly, now requires `use builtin` before use, consistent with
     other standard library modules.
