--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -66,3 +66,7 @@ New features in the standard library:
 
 -   The `store:` module now exposes all functionalities of Elvish's persistent
     store.
+
+-   New `compare` command to allow efficient comparison of numbers, strings, and
+    lists ([#1347](https://b.elv.sh/1347)). This is the default comparator used
+    by `order`.
