--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -95,7 +95,8 @@ New features in the interactive editor:
     listing, location and navigation modes.
 
 -   A new `edit:after-command` hook that is invoked after each interactive
-    command line is run.
+    command line is run ([#1029](https://b.elv.sh/1029)).
 
 -   A new `edit:command-duration` variable that is the number of seconds to
-    execute the most recent interactive command line.
+    execute the most recent interactive command line
+    ([#1029](https://b.elv.sh/1029)).
