Implement unix:ulimit
Resolves #959

--- a/0.18.0-release-notes.md
+++ b/0.18.0-release-notes.md
@@ -41,3 +41,5 @@ or compiled, even if it is not executed:
 
 -   A new `call` command to call a command, using a list for and a map for
     options.
+
+-   A new `unix:ulimit` command ([#959](https://b.elv.sh/959)).
