Update 0.16.0 release notes

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -40,6 +40,8 @@ or compiled, even if it is not executed:
 -   The `prclose` and `pwclose` commands are deprecated. Use `file:close`
     instead.
 
+The following deprecated features unfortunately doesn't trigger any warnings:
+
 -   The `math:pow10` command is deprecated. Use `math:pow 10 $exponent` instead.
 
 # Notable bugfixes
@@ -100,3 +102,10 @@ New features in the interactive editor:
 -   A new `edit:command-duration` variable that is the number of seconds to
     execute the most recent interactive command line
     ([#1029](https://b.elv.sh/1029)).
+
+New features in the command behavior:
+
+-   Elvish now follows the XDG directory spec for placing the database and
+    searching for `rc.elv` and libraries ([#383](https://b.elv.sh/383)). The
+    legacy directory `~/.elvish` is still respected for now, but may issue
+    deprecation warnings in a future version.
