Add doc for the Elvish command.
The new page documents the new XDG-compliant search paths, among other things.

This resolves #383.

--- a/0.16.0-release-notes.md
+++ b/0.16.0-release-notes.md
@@ -108,4 +108,5 @@ New features in the command behavior:
 -   Elvish now follows the XDG directory spec for placing the database and
     searching for `rc.elv` and libraries ([#383](https://b.elv.sh/383)). The
     legacy directory `~/.elvish` is still respected for now, but may issue
-    deprecation warnings in a future version.
+    deprecation warnings in a future version. The exact paths are documented in
+    the page for [the Elvish command](https://elv.sh/ref/command.html).
