--- a/website/blog/0.16.0-release-notes.md
+++ b/website/blog/0.16.0-release-notes.md
@@ -1,5 +1,8 @@
-This is the draft release notes for 0.16.0. It is scheduled to be released on
-2020-07-01.
+Version 0.16.0 has been released on 2021-08-21, 6 months after 0.15.0, bringing
+many new features and bugfixes.
+
+As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
+platforms.
 
 # Breaking changes
 
