--- a/website/blog/0.16.0-release-notes.md
+++ b/website/blog/0.16.0-release-notes.md
@@ -4,6 +4,9 @@ many new features and bugfixes.
 As usual, [prebuilt binaries](https://elv.sh/get) are offered for most common
 platforms.
 
+**Note**: Version 0.16.1 is identical to 0.16.0 except that it fixes a minor
+packaging issue.
+
 # Breaking changes
 
 -   Exceptions caused by a command trying to write to a closed pipe are now
