Fix typos and add codespell to CI

--- a/website/blog/0.16.0-release-notes.md
+++ b/website/blog/0.16.0-release-notes.md
@@ -14,7 +14,7 @@ packaging issue.
     the pipeline.
 
 -   The `builtin:` namespace, useful for referring to builtin variables and
-    commmands explicitly, now requires `use builtin` before use, consistent with
+    commands explicitly, now requires `use builtin` before use, consistent with
     other standard library modules.
 
 -   As a side effect of support for a integer numbers, contexts that require
