Document stackable modes in 0.17.0 release notes.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -1,2 +1,10 @@
 This is the draft release notes for 0.17.0, scheduled to be released on
 2022-01-01.
+
+# Notable new features
+
+New features in the interactive editor:
+
+-   Editor modes now form a stack, instead of being mutually exclusive. For
+    example, it is now possible to start a minibuf mode within a completion
+    mode, and vice versa.
