Expose all functionalities of the persistent store in the store: module.
This fixes #1032.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -8,3 +8,8 @@ New features in the interactive editor:
 -   Editor modes now form a stack, instead of being mutually exclusive. For
     example, it is now possible to start a minibuf mode within a completion
     mode, and vice versa.
+
+New features in the standard library:
+
+-   The `store:` module now exposes all functionalities of Elvish's persistent
+    store.
