Remove commands deprecated in 0.16.0, and deprecate dir-history.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -1,6 +1,15 @@
 This is the draft release notes for 0.17.0, scheduled to be released on
 2022-01-01.
 
+# Deprecated features
+
+Deprecated features will be removed in 0.18.0.
+
+The following deprecated features trigger a warning whenever the code is parsed
+or compiled, even if it is not executed:
+
+-   The `dir-history` command is deprecated. Use `store:dirs` instead.
+
 # Notable new features
 
 New features in the interactive editor:
