Add special command "coalesce".
This fixes #1404.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -12,6 +12,10 @@ or compiled, even if it is not executed:
 
 # Notable new features
 
+New features in the language:
+
+-   A new special command `coalesce`.
+
 New features in the interactive editor:
 
 -   Editor modes now form a stack, instead of being mutually exclusive. For
