Support turning off implicit external command resolution.
See documentation in website/ref/language.html.

This fixes #978.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -14,6 +14,10 @@ or compiled, even if it is not executed:
 
 New features in the language:
 
+-   A new special command `pragma`. Using `pragma unknown-command = disallow`
+    turns off the default behavior of treating unknown commands as external
+    commands.
+
 -   A new special command `coalesce`.
 
 New features in the interactive editor:
