Deprecate the legacy assignment form from 0.17.0.
This addresses #645.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -10,6 +10,10 @@ or compiled, even if it is not executed:
 
 -   The `dir-history` command is deprecated. Use `store:dirs` instead.
 
+-   The legacy assignment form is deprecated. Depending on whether the left-hand
+    variable already exists or not, use `var` or `set` instead. There is a
+    dedicated program to help migrate scripts; see https://go.elv.sh/u0.17.
+
 # Notable new features
 
 New features in the language:
