Check assignments to read-only variable during compilation.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -1,6 +1,11 @@
 This is the draft release notes for 0.17.0, scheduled to be released on
 2022-01-01.
 
+# Breaking changes
+
+-   Attempting to assign to a read-only variable (e.g. `set nil = x`) is now a
+    compile-time error rather than an exception.
+
 # Deprecated features
 
 Deprecated features will be removed in 0.18.0.
