--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -16,8 +16,12 @@ or compiled, even if it is not executed:
 -   The `dir-history` command is deprecated. Use `store:dirs` instead.
 
 -   The legacy assignment form is deprecated. Depending on whether the left-hand
-    variable already exists or not, use `var` or `set` instead. There is a
-    dedicated program to help migrate scripts; see https://go.elv.sh/u0.17.
+    variable already exists or not, use `var` or `set` instead. Use the
+    [upgrader](https://go.elv.sh/u0.17) to migrate scripts.
+
+-   The lambda syntax that declares arguments and options within `[]` before `{`
+    has been deprecated. The new syntax now declares arguments and options
+    within a pair of `|`, after `{`.
 
 # Notable new features
 
