Deprecate the local: and up: special namespaces in 0.17.
Also deprecate the use of a leading empty namespace.

This addresses #1409.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -21,15 +21,38 @@ or compiled, even if it is not executed:
 
 -   The lambda syntax that declares arguments and options within `[]` before `{`
     has been deprecated. The new syntax now declares arguments and options
-    within a pair of `|`, after `{`.
+    within a pair of `|`, after `{`. Use the [upgrader](https://go.elv.sh/u0.17)
+    to migrate scripts.
+
+-   Use of the special namespace `local:` is deprecated.
+
+    -   If you are using `local:` to reference variables (e.g. `echo $local:x`),
+        `local:` is never necessary in the first place since Elvish always
+        resolves local variables first, so just remove it.
+
+    -   If you are using `local:` when assigning variables (e.g.
+        `local:x = foo`), `local:` makes sure that a new variable is created;
+        use the `var` special command instead.
+
+-   Use of the special namespace `up:` is deprecated.
+
+    -   If you are using `up:` to access a non-shadowed variable in an outer
+        scope, `up:` is not necessary; just remove it.
+
+    -   If you are using `up:` to access a shadowed variable in an outer scope,
+        rename the variables to have different names.
+
+-   Use of a leading empty namespace in a variable name (e.g. `$:x`) is
+    deprecated. Since `$:x` is always equivalent to `$x` anyway, just remove the
+    `:` prefix.
 
 # Notable new features
 
 New features in the language:
 
--   A new special command `pragma`. Using `pragma unknown-command = disallow`
-    turns off the default behavior of treating unknown commands as external
-    commands.
+-   A new special command `pragma`. The only supported pragma now is
+    `unknown command`; using `pragma unknown command = disallow` turns off the
+    default behavior of treating unknown commands as external commands.
 
 -   A new special command `coalesce`.
 
