Replace legacy lambda with new lambda examples
I was surprised to see so many legacy lambda syntax examples in the
documentation. This replaces all of them with the new syntax -- excluding
the handful of cases meant to explicitly verify the legacy form is still
valid. This also adds a link to the issue in the release notes which
documents the change in syntax.

Related #664

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -22,7 +22,7 @@ or compiled, even if it is not executed:
 -   The lambda syntax that declares arguments and options within `[]` before `{`
     has been deprecated. The new syntax now declares arguments and options
     within a pair of `|`, after `{`. Use the [upgrader](https://go.elv.sh/u0.17)
-    to migrate scripts.
+    to migrate scripts. See ([#664](https://b.elv.sh/664)).
 
 -   Use of the special namespace `local:` is deprecated.
 
