Document performance improvement.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -66,3 +66,10 @@ New features in the standard library:
 
 -   The `store:` module now exposes all functionalities of Elvish's persistent
     store.
+
+Performance improvements:
+
+-   The overhead of executing pipelines consisting of a single form (i.e. a
+    simple command with no pipes) has been reduced. A code chunk containing just
+    `nop` command now executes 4 times as fast as before. Thanks to kolbycrouch
+    for suggesting this optimization!
