--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -67,9 +67,9 @@ New features in the standard library:
 -   The `store:` module now exposes all functionalities of Elvish's persistent
     store.
 
--   New `compare` command to allow efficient comparison of numbers, strings, and
-    lists ([#1347](https://b.elv.sh/1347)). This is the default comparator used
-    by `order`.
+-   New `compare` command to compare numbers, strings, and lists
+    ([#1347](https://b.elv.sh/1347)), in a consistent way as the `order`
+    builtin.
 
 Performance improvements:
 
