Document that "range" now supports counting down in the 0.17.0 release notes.

--- a/0.17.0-release-notes.md
+++ b/0.17.0-release-notes.md
@@ -71,6 +71,8 @@ New features in the standard library:
     ([#1347](https://b.elv.sh/1347)), in a consistent way as the `order`
     builtin.
 
+-   The `range` command now supports counting down.
+
 Performance improvements:
 
 -   The overhead of executing pipelines consisting of a single form (i.e. a
